script removed from local and css alignement fix

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -162,7 +162,7 @@
     top: 0;
     left: 0;
     .popularTagsDiv{
-      padding: 0 1.2rem;
+      padding: 0 1.5rem;
       display: flex;
       flex-wrap: wrap;
       // justify-content: center;
